{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 35,
  "lineage": "b4592556-d8f6-0dda-d317-a17371e65160",
  "resources": [
    {
      "module": "module.sg_ativos_notify",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "meu_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:security-group/sg-0d9b7b05e867e2255",
            "description": "Grupo de seguranca",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9b7b05e867e2255",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir HTTP",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir HTTPS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ativos-notify-sg20250421113631290900000005",
            "name_prefix": "ativos-notify-sg",
            "owner_id": "715841344869",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "homolog",
              "Name": "sg-ativos-notify",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "homolog",
              "Name": "sg-ativos-notify",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-093214cdf62b66ea9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_rede.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_rede",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:internet-gateway/igw-053bce498e2b5a80d",
            "id": "igw-053bce498e2b5a80d",
            "owner_id": "715841344869",
            "tags": {
              "Environment": "homolog",
              "Name": "igw-ativos-notify",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "homolog",
              "Name": "igw-ativos-notify",
              "Terraform": "true"
            },
            "vpc_id": "vpc-093214cdf62b66ea9"
          },
          "dependencies": [
            "module.vpc_rede.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_rede",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-053bce498e2b5a80d",
            "id": "r-rtb-0e141191b58539eba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e141191b58539eba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_rede.aws_internet_gateway.igw",
            "module.vpc_rede.aws_route_table.public",
            "module.vpc_rede.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_rede",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:route-table/rtb-093c211efaeb33ff4",
            "id": "rtb-093c211efaeb33ff4",
            "owner_id": "715841344869",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "homolog",
              "Name": "private-rt-ativos-notify",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "homolog",
              "Name": "private-rt-ativos-notify",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-093214cdf62b66ea9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_rede.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_rede",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:route-table/rtb-0e141191b58539eba",
            "id": "rtb-0e141191b58539eba",
            "owner_id": "715841344869",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-053bce498e2b5a80d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "homolog",
              "Name": "public-rt-ativos-notify",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "homolog",
              "Name": "public-rt-ativos-notify",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-093214cdf62b66ea9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_rede.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_rede",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee9fd1d6ce2f0fd0",
            "route_table_id": "rtb-093c211efaeb33ff4",
            "subnet_id": "subnet-03b82968b1235e14f"
          },
          "dependencies": [
            "module.vpc_rede.aws_route_table.private",
            "module.vpc_rede.aws_subnet.private_subnets",
            "module.vpc_rede.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf4f3478f6081c56",
            "route_table_id": "rtb-093c211efaeb33ff4",
            "subnet_id": "subnet-044cf9887f2a1cc81"
          },
          "dependencies": [
            "module.vpc_rede.aws_route_table.private",
            "module.vpc_rede.aws_subnet.private_subnets",
            "module.vpc_rede.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f95f5d7d4da0b4f",
            "route_table_id": "rtb-093c211efaeb33ff4",
            "subnet_id": "subnet-0d7f14c5d4147c89c"
          },
          "dependencies": [
            "module.vpc_rede.aws_route_table.private",
            "module.vpc_rede.aws_subnet.private_subnets",
            "module.vpc_rede.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_rede",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0955827e53adf8cc2",
            "route_table_id": "rtb-0e141191b58539eba",
            "subnet_id": "subnet-0e6804c6d2bf2544a"
          },
          "dependencies": [
            "module.vpc_rede.aws_route_table.public",
            "module.vpc_rede.aws_subnet.public_subnets",
            "module.vpc_rede.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f86f9cdee9c3ac7",
            "route_table_id": "rtb-0e141191b58539eba",
            "subnet_id": "subnet-0b610d87e683c53fa"
          },
          "dependencies": [
            "module.vpc_rede.aws_route_table.public",
            "module.vpc_rede.aws_subnet.public_subnets",
            "module.vpc_rede.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091f552c6f2756a9a",
            "route_table_id": "rtb-0e141191b58539eba",
            "subnet_id": "subnet-03cc153002db3e0aa"
          },
          "dependencies": [
            "module.vpc_rede.aws_route_table.public",
            "module.vpc_rede.aws_subnet.public_subnets",
            "module.vpc_rede.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_rede",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:subnet/subnet-03b82968b1235e14f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b82968b1235e14f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841344869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "homolog",
              "Name": "private-ativos-notify-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "homolog",
              "Name": "private-ativos-notify-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-093214cdf62b66ea9"
          },
          "dependencies": [
            "module.vpc_rede.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:subnet/subnet-044cf9887f2a1cc81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044cf9887f2a1cc81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841344869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "homolog",
              "Name": "private-ativos-notify-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "homolog",
              "Name": "private-ativos-notify-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-093214cdf62b66ea9"
          },
          "dependencies": [
            "module.vpc_rede.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:subnet/subnet-0d7f14c5d4147c89c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7f14c5d4147c89c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841344869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "homolog",
              "Name": "private-ativos-notify-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "homolog",
              "Name": "private-ativos-notify-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-093214cdf62b66ea9"
          },
          "dependencies": [
            "module.vpc_rede.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_rede",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:subnet/subnet-0e6804c6d2bf2544a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6804c6d2bf2544a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "715841344869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "homolog",
              "Name": "public-ativos-notify-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "homolog",
              "Name": "public-ativos-notify-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-093214cdf62b66ea9"
          },
          "dependencies": [
            "module.vpc_rede.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:subnet/subnet-0b610d87e683c53fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b610d87e683c53fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "715841344869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "homolog",
              "Name": "public-ativos-notify-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "homolog",
              "Name": "public-ativos-notify-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-093214cdf62b66ea9"
          },
          "dependencies": [
            "module.vpc_rede.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:subnet/subnet-03cc153002db3e0aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cc153002db3e0aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "715841344869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "homolog",
              "Name": "public-ativos-notify-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "homolog",
              "Name": "public-ativos-notify-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-093214cdf62b66ea9"
          },
          "dependencies": [
            "module.vpc_rede.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_rede",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:vpc/vpc-093214cdf62b66ea9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09f602560ed4e719b",
            "default_route_table_id": "rtb-0985cadf65d97cedf",
            "default_security_group_id": "sg-0ac20fff2199185f5",
            "dhcp_options_id": "dopt-064155a5eff669e34",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093214cdf62b66ea9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0985cadf65d97cedf",
            "owner_id": "715841344869",
            "tags": {
              "Environment": "homolog",
              "Name": "vpc-ativos-notify",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "homolog",
              "Name": "vpc-ativos-notify",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}